# agent-aibom

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  agent-aibom.yaml  pyproject.toml
agent_aibom/: __init__.py  cli.py
agent_aibom/core/: __init__.py  config.py  models.py  registry.py
agent_aibom/dashboard/: __init__.py  generator.py
agent_aibom/discovery/: __init__.py  autogen_scanner.py  base.py  claude_scanner.py  crewai_scanner.py  generic_scanner.py  langgraph_scanner.py  mcp_scanner.py  orchestrator.py
agent_aibom/export/: __init__.py  csv_export.py  json_export.py  sarif_export.py
agent_aibom/graph/: __init__.py  delegation_graph.py  permission_graph.py  visualizer.py
agent_aibom/risk/: __init__.py  policies.py  rules.py  scorer.py
docs/: beyond-ml-bom-agent-aibom-2026.md
tests/: conftest.py  test_cli_integration.py  test_discovery_edge_cases.py  test_export.py  test_graph.py  test_models.py  test_pressure.py  test_registry.py  test_risk.py
